# RM_ROS

./: README.md
remote_devel/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake
remote_devel/atomic_configure/: .rosinstall  _setup_util.py  local_setup.sh
remote_devel/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  package.cmake  pkg.develspace.context.pc.py  setup_cached.sh
remote_devel/catkin_generated/installspace/: _setup_util.py  rm_commonConfig.cmake  rm_manual.pc  rm_manualConfig.cmake
remote_devel/devel/: .catkin  setup.sh
remote_devel/gtest/: CTestTestfile.cmake  cmake_install.cmake
remote_devel/gtest/googlemock/: CTestTestfile.cmake  cmake_install.cmake
remote_devel/gtest/googletest/: CTestTestfile.cmake
remote_devel/rm_common/: CTestTestfile.cmake  cmake_install.cmake
remote_devel/rm_control/: CTestTestfile.cmake  cmake_install.cmake
remote_devel/rm_control/catkin_generated/: package.cmake
remote_devel/rm_controllers/imu_filter_controllers/: CTestTestfile.cmake  cmake_install.cmake
remote_devel/rm_dbus/: CTestTestfile.cmake  cmake_install.cmake
remote_devel/rm_description/: CTestTestfile.cmake  cmake_install.cmake
remote_devel/rm_gazebo/: CTestTestfile.cmake  cmake_install.cmake
remote_devel/rm_hw/: CTestTestfile.cmake  cmake_install.cmake
remote_devel/rm_manual/: CTestTestfile.cmake  cmake_install.cmake
remote_devel/rm_msgs/: CTestTestfile.cmake  cmake_install.cmake
rm_control/rm_msgs/: CMakeLists.txt
rm_control/rm_msgs/msg/: CapacityData.msg  (+3 more)
rm_control/rm_referee/: CMakeLists.txt  package.xml
rm_control/rm_referee/config/: engineer.yaml  hero.yaml  standard5.yaml
rm_control/rm_referee/include/rm_referee/: chassis_gimbal_referee.h  chassis_gimbal_shooter_cover_referee.h  chassis_gimbal_shooter_referee.h  engineer_referee.h
rm_control/rm_referee/include/rm_referee/common/: data.h  referee.h  referee_base.h
rm_control/rm_referee/include/rm_referee/ui/: graph.h  ui.h
rm_control/rm_referee/launch/: load.launch
rm_control/rm_referee/src/: chassis_gimbal_referee.cpp  chassis_gimbal_shooter_cover_referee.cpp  chassis_gimbal_shooter_referee.cpp  engineer_referee.cpp  main.cpp
rm_control/rm_referee/src/common/: referee.cpp  referee_base.cpp
rm_control/rm_referee/src/ui/: graph.cpp  ui.cpp
(+343 files in other folders)
