
<package format="2">
  <name>rm_referee</name>
  <version>0.0.0</version>
  <description>The rm_referee package</description>
  <maintainer email="ljq@todo.todo">ljq</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rm_common</depend>
  <depend>rm_msgs</depend>
  <depend>roscpp</depend>
  <depend>serial</depend>
  <!--  The export tag contains other, unspecified, tags  -->
  <export>
    <!--  Other tools can request additional information be placed here  -->
  </export>
</package>
